<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mFav"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/favorito"
        app:showAsAction="withText" />
    <item
        android:id="@+id/mShare"
        android:icon="@drawable/ic_baseline_share"
        android:title="@string/compartilhar"
        app:showAsAction="withText" />
    <item
        android:id="@+id/mHelp"
        android:icon="@drawable/ic_baseline_help"
        android:title="@string/ajuda"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mHome"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home"
        app:showAsAction="withText" />
    <item
        android:id="@+id/mSett"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/configura_es"
        app:showAsAction="withText" />
    <item
        android:id="@+id/mSair"
        android:icon="@drawable/ic_baseline_exit_to_app"
        android:title="@string/sair"
        app:showAsAction="withText" />

</menu>